[package]
name = "qibolab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
numpy = "0.20.0"
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }

[dev-dependencies]
anyhow = "1.0.79"
